--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,6 +1,6 @@
 <h1>Users#new</h1>
 <p>Find me in app/views/users/new.html.erb</p>
-
+<%= notice %>
 <%= form_with model: @user do |form| %>
 
 <p><%= form.text_field :username, placeholder:"Enter username" %></p>
